GNOME Bugzilla – Bug 643124
SIGSEGV using Ctrl+Alt+Shift+LETTER for 2 shortucts
Last modified: 2011-02-24 04:37:30 UTC
I've the following segmentation fault doing the same: * go to keyboard > shortcut > a11y * (all shortcuts in this category are unassigned in my jhbuild sandbox) * set "zoom in magnifier" to Ctrl+Alt+Shift+L * set "zoom out magnifier" to Ctrl+Alt+Shift+K * CRASH! the actual LETTER or binding seems irrilevant (for instance I tried starting from "toogle magnifier" to Ctrl+Alt+Shift+M). Here is the stacktrace: gnome-control-center:29202): GLib-GObject-CRITICAL **: Object class EggCellEditableEventBox doesn't implement property 'editing-canceled' from interface 'GtkCellEditable' Program received signal SIGSEGV, Segmentation fault. 0x00007ffff46e9426 in ?? () from /lib/libc.so.6 (gdb) t a a bt
+ Trace 226080
Thread 1 (Thread 0x7ffff7fc2920 (LWP 29202))
It seems related to Ctrl+Alt. I tried to change default shortcut for logout (Ctrl+Alt+Del) to something different, then re-use the default one. Same crash. In System category here is yet Ctrl+Alt+L for lock screen...
The code was utterly crappy, and I reworked it (thought it worked enough when I rewrote the key handling code, but obviously didn't test this). I also found a bug that made GConf backed keys just not work. commit a13cf931a9bb49f612104b4e4fd08a6c439fc147 Author: Bastien Nocera <hadess@hadess.net> Date: Thu Feb 24 04:33:17 2011 +0000 keyboard: Rework stupid conflict detection code https://bugzilla.gnome.org/show_bug.cgi?id=643124