keyboard: Rework stupid conflict detection code

https://bugzilla.gnome.org/show_bug.cgi?id=643124